Provide access to `pstoimg`
PRESTO uses `pstoimg` when creating certain subplots in its diagnostics, and that is provided with the `latex2html` package in Ubuntu.

--- a/Dockerfile.psr-search
+++ b/Dockerfile.psr-search
@@ -54,6 +54,7 @@ RUN apt-get update && \
     libblas-dev \
     liblapack-dev \
     openssh-server \
+    latex2html \
     xorg \
     bc \
     xauth && \
