--- a/Dockerfile.psr-search
+++ b/Dockerfile.psr-search
@@ -117,7 +117,7 @@ ENV PATH $PATH:$PSRHOME/psrcat_tar
 # - build tempo
 # - build presto
 # - build riptide
-RUN wget http://www.atnf.csiro.au/people/pulsar/psrcat/downloads/psrcat_pkg.tar.gz && tar -xvf psrcat_pkg.tar.gz -C $PSRHOME && rm psrcat_pkg.tar.gz && \
+RUN wget https://www.atnf.csiro.au/research/pulsar/psrcat/downloads/psrcat_pkg.v1.71.tar.gz && tar -xvf psrcat_pkg.v1.71.tar.gz -C $PSRHOME && rm psrcat_pkg.v1.71.tar.gz && \
     wget https://sourceforge.net/projects/swig/files/swig/swig-4.0.1/swig-4.0.1.tar.gz && tar -xvf swig-4.0.1.tar.gz -C $PSRHOME && rm swig-4.0.1.tar.gz && \
     git clone git://git.code.sf.net/p/tempo/tempo tempo && \
     git clone https://github.com/scottransom/presto.git presto && \
